# cpac

./: .gitignore  CONTRIBUTING.md  CPAC_SPEC.md  Cargo.toml  README.md  RECORDED-CHANGES.md  install.sh  recorded-changes.md  rn.md
.github/workflows/: release.yml
docs/: installation.md  trust-algorithm.md
src/: compare.rs  diff.rs  install.rs  main.rs  prompt.rs  remove.rs  sanitize.rs  trust_db.rs  update.rs  upgrade.rs
src/audit/: mod.rs
src/backends/: aur.rs  install.rs  mod.rs  pacman.rs
src/cache/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/display/: mod.rs
src/resolver/: mod.rs
src/trust/: mod.rs
