[package]
name = "cpac"
version = "0.5.0"
edition = "2021"
authors = ["Sabeeir Sharrma"]
description = "Community Package Analysis Client — a package trust layer for Arch-based Linux"
license = "GPL-3.0"
repository = "https://github.com/SabeeirSharrma/cpac"
readme = "README.md"
keywords = ["arch", "linux", "package", "trust", "security"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sled = "0.34"
dirs = "5"
once_cell = "1.19"
toml = "0.8"
